--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="An online Movie Review Platform" />\
+    <title>Movie Review Platform - By Prakhar</title>
   </head>
   <body>
     <div id="root"></div>
